Re-jig templates for redundancy config-map

--- a/helm/templates/solaceStatefullSet.yaml
+++ b/helm/templates/solaceStatefullSet.yaml
@@ -19,15 +19,6 @@ spec:
         app: {{ template "solace.name" . }}
         release: {{ .Release.Name }}
     spec:
-{{- if .Values.service.nodeSelector }}
-      nodeSelector:
-{{- range $item := .Values.service.nodeSelector }}
-{{- range $key,$val := $item }}
-        {{ $key }}: {{ $val | quote}}
-{{- end }}
-{{- end }}
-{{- end }}
-      # hostNetwork: true
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -71,53 +62,11 @@ spec:
             add:
               - IPC_LOCK
               - SYS_NICE
-        env:
-{{- if .Values.solace.redundancy }}
-        - name: SOLACE_CLUSTER_SIZE
-          value: '3'
-        - name: REDUNDANCY_ENABLE
-          value: 'yes'
-        - name: CONFIGSYNC_ENABLE
-          value: 'yes'
-        - name: REDUNDANCY_GROUP_PASSWORD
-          value: SOLOS_ADMIN_PASSWORD
-        - name: REDUNDANCY_GROUP_NODE_PRIMARY_NODETYPE
-          value: 'message_routing'
-        - name: REDUNDANCY_GROUP_NODE_PRIMARY_CONNECTVIA
-          value: {{ template "solace.fullname" . }}-0
-        - name: REDUNDANCY_GROUP_NODE_BACKUP_NODETYPE
-          value: 'message_routing'
-        - name: REDUNDANCY_GROUP_NODE_BACKUP_CONNECTVIA
-          value: {{ template "solace.fullname" . }}-1
-        - name: REDUNDANCY_GROUP_NODE_MONITOR_NODETYPE
-          value: 'monitoring'
-        - name: REDUNDANCY_GROUP_NODE_BACKUP_CONNECTVIA
-          value: {{ template "solace.fullname" . }}-2           
-{{- else }}
-        - name: SOLACE_CLUSTER_SIZE
-          value: '1'
-{{- end }}
-        - name: USERNAME_ADMIN_PASSWORD
-          value: SOLOS_ADMIN_PASSWORD
-        - name: USERNAME_ADMIN_GLOBALACCESSLEVEL
-          value: 'admin'
-        - name: SERVICE_SSH_PORT
-          value: '22'
-        - name: STATEFULSET_NAME
-          value: {{ template "solace.fullname" . }}
-        - name: STATEFULSET_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: system_scaling_maxconnectioncount
-{{- if eq .Values.solace.size "small" }}
-          value: "1000"
-{{- else if eq .Values.solace.size "medium" }}
-          value: "10000"
-{{- else if eq .Values.solace.size "large" }}
-          value: "100000"
-{{- end }}
+        commnad:
+          - source /mnt/disks/solce/init.sh
         volumeMounts:
+        - name: config-map
+          mountPath: /mnt/disks/solce
         - name: dshm
           mountPath: /dev/shm
         - name: data
@@ -136,6 +85,9 @@ spec:
         - containerPort: {{ $item.port }}
           protocol: {{ $item.protocol }}{{end}}
       volumes:
+        - name: config-map
+          configMap:
+            name: {{ template "fullname" . }}
         - name: dshm
           emptyDir:
             medium: Memory
