--- a/solace/values.yaml
+++ b/solace/values.yaml
@@ -1,6 +1,5 @@
-# Need to first provision a directory /mnt/disks/vmr on host node 
-#  use this for Solace message spool.  Used to test various fs and mount options 
-configurationFiles: false
+# Default storage, exemplifies simplisity, will create a /mnt/stateful_partition dir on host 
+#  and use this for Solace message spool 
 solace:
   redundancy: false
   size: small
@@ -44,4 +43,3 @@ service:
       protocol: UDP
 storage:
   persistent: false
-  hostPath: /mnt/disks/vmr
