--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -4,12 +4,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "solace.fullname" . }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: {{ template "name" . }}
+    app: {{ template "solace.name" . }}
 data:
   init.sh: |-
       export username_admin_password=SOLOS_ADMIN_PASSWORD
@@ -22,36 +22,40 @@ data:
 {{- else if eq .Values.solace.size "large" }}
       export system_scaling_maxconnectioncount="100000"
 {{- end }}
-{{ if .Values.solace.redundancy }}
+{{- if .Values.solace.redundancy }}
+      # This is a hack to get ordinal
+      # https://github.com/kubernetes/kubernetes/issues/40651
+      # node_ordinal=$(STATEFULSET_ORDINAL)
       IFS='-' read -ra host_array <<< $(hostname)
       node_ordinal=${host_array[-1]}
-      service={{ template "fullname" . }}
+      namespace=$(STATEFULSET_NAMESPACE)
+      service={{ template "solace.fullname" . }}
       service_name=$(echo ${service} | sed 's/-//g')
       export routername=$(echo $(hostname) | sed 's/-//g')
       export redundancy_enable=yes
       export configsync_enable=yes
-      export redundancy_group_password=solace
+      export redundancy_group_password=SOLOS_ADMIN_PASSWORD
       export redundancy_group_node_${service_name}0_nodetype=message_routing
-      export redundancy_group_node_${service_name}0_connectvia=${service_name}-0.${service_name}-discovery.default.svc
+      export redundancy_group_node_${service_name}0_connectvia=${service}-0.${service}-discovery.${namespace}.svc
       export redundancy_group_node_${service_name}1_nodetype=message_routing
-      export redundancy_group_node_${service_name}1_connectvia=${service_name}-1.${service_name}-discovery.default.svc
+      export redundancy_group_node_${service_name}1_connectvia=${service}-1.${service}-discovery.${namespace}.svc
       export redundancy_group_node_${service_name}2_nodetype=monitoring
-      export redundancy_group_node_${service_name}2_connectvia=${service_name}-2.${service_name}-discovery.default.svc
+      export redundancy_group_node_${service_name}2_connectvia=${service}-2.${service}-discovery.${namespace}.svc
 
       case ${node_ordinal} in
       0 )
        export nodetype=message_routing
-       export redundancy_matelink_connectvia=${service_name}-1.${service_name}-discovery.default.svc
+       export redundancy_matelink_connectvia=${service}-1.${service}-discovery.${namespace}.svc
        export redundancy_activestandbyrole=primary
         ;;
       1)
        export nodetype=message_routing
-       export redundancy_matelink_connectvia=${service_name}-0.${service_name}-discovery.default.svc
+       export redundancy_matelink_connectvia=${service}-0.${service}-discovery.${namespace}.svc
        export redundancy_activestandbyrole=backup
         ;;
       2)
-       export nodetype=monitor
+       export nodetype=monitoring
        ;;
       esac
-
 {{- end }}
+{{ end }}
