--- a/solace/templates/solaceStatefullSet.yaml
+++ b/solace/templates/solaceStatefullSet.yaml
@@ -62,11 +62,26 @@ spec:
             add:
               - IPC_LOCK
               - SYS_NICE
-        commnad:
-          - source /mnt/disks/solce/init.sh
+        env:
+        - name: STATEFULSET_NAME
+          value: {{ template "fullname" . }}
+        - name: STATEFULSET_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+ #       - name: STATEFULSET_ORDINAL
+ #         valueFrom:
+ #           fieldRef:
+ #             fieldPath: metadata.annotations['annotationKey']
+        command:
+         - bash
+         - "-ec"
+         - |
+           source /mnt/disks/solace/init.sh
+           /usr/sbin/boot.sh
         volumeMounts:
         - name: config-map
-          mountPath: /mnt/disks/solce
+          mountPath: /mnt/disks/solace
         - name: dshm
           mountPath: /dev/shm
         - name: data
@@ -87,7 +102,7 @@ spec:
       volumes:
         - name: config-map
           configMap:
-            name: {{ template "fullname" . }}
+            name: {{ template "solace.fullname" . }}
         - name: dshm
           emptyDir:
             medium: Memory
