--- a/solace/values-examples/small-direct-noha.yaml
+++ b/solace/values-examples/small-direct-noha.yaml
@@ -1,6 +1,5 @@
-# Bind PVC to existing voluem.  
-#  First create volume for example "gcloud compute disks create --size 30GB solace-disk"
-configurationFiles: false
+# Default storage, exemplifies simplisity, will create a /mnt/stateful_partition dir on host 
+#  and use this for Solace message spool 
 solace:
   redundancy: false
   size: small
@@ -44,4 +43,3 @@ service:
       protocol: UDP
 storage:
   persistent: false
-  existingVolume: solace-disk
