update from working solution

--- a/solace/templates/solaceStatefullSet.yaml
+++ b/solace/templates/solaceStatefullSet.yaml
@@ -54,8 +54,9 @@ spec:
         readinessProbe:
           initialDelaySeconds: 30
           periodSeconds: 5
-          tcpSocket:
-            port: 55555
+          httpGet:
+            port: 5550
+            path: /health-check/guaranteed-active
         securityContext:
           privileged: true
           capabilities:
@@ -63,51 +64,23 @@ spec:
               - IPC_LOCK
               - SYS_NICE
         env:
-{{- if .Values.solace.redundancy }}
-        - name: SOLACE_CLUSTER_SIZE
-          value: '3'
-        - name: REDUNDANCY_ENABLE
-          value: 'yes'
-        - name: CONFIGSYNC_ENABLE
-          value: 'yes'
-        - name: REDUNDANCY_GROUP_PASSWORD
-          value: SOLOS_ADMIN_PASSWORD
-        - name: REDUNDANCY_GROUP_NODE_PRIMARY_NODETYPE
-          value: 'message_routing'
-        - name: REDUNDANCY_GROUP_NODE_PRIMARY_CONNECTVIA
-          value: {{ template "solace.fullname" . }}-0
-        - name: REDUNDANCY_GROUP_NODE_BACKUP_NODETYPE
-          value: 'message_routing'
-        - name: REDUNDANCY_GROUP_NODE_BACKUP_CONNECTVIA
-          value: {{ template "solace.fullname" . }}-1
-        - name: REDUNDANCY_GROUP_NODE_MONITOR_NODETYPE
-          value: 'monitoring'
-        - name: REDUNDANCY_GROUP_NODE_BACKUP_CONNECTVIA
-          value: {{ template "solace.fullname" . }}-2           
-{{- else }}
-        - name: SOLACE_CLUSTER_SIZE
-          value: '1'
-{{- end }}
-        - name: USERNAME_ADMIN_PASSWORD
-          value: 'SOLOS_ADMIN_PASSWORD'
-        - name: USERNAME_ADMIN_GLOBALACCESSLEVEL
-          value: 'admin'
-        - name: SERVICE_SSH_PORT
-          value: '22'
         - name: STATEFULSET_NAME
           value: {{ template "solace.fullname" . }}
         - name: STATEFULSET_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: system_scaling_maxconnectioncount
-{{- if eq .Values.solace.size "small" }}
-          value: "1000"
-{{- else if eq .Values.solace.size "medium" }}
-          value: "10000"
-{{- else if eq .Values.solace.size "large" }}
-          value: "100000"
-{{- end }}
+# [TODO] not using correct method of finding ordinal until we bump min Kubernetes release above 1.8.1
+ #       - name: STATEFULSET_ORDINAL
+ #         valueFrom:
+ #           fieldRef:
+ #             fieldPath: metadata.annotations['annotationKey']
+        command:
+         - bash
+         - "-ec"
+         - |
+           source /mnt/disks/solace/init.sh
+           /usr/sbin/boot.sh
         volumeMounts:
         - name: config-map
           mountPath: /mnt/disks/solace
@@ -131,7 +104,7 @@ spec:
       volumes:
         - name: config-map
           configMap:
-            name: {{ template "fullname" . }}
+            name: {{ template "solace.fullname" . }}
         - name: dshm
           emptyDir:
             medium: Memory
