--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -13,6 +13,7 @@ data:
       export username_admin_password=SOLOS_ADMIN_PASSWORD
       export username_admin_globalaccesslevel=admin
       export service_ssh_port='22'
+      export logging_debug_output=stdout
 {{- if eq .Values.solace.size "small" }}
       export system_scaling_maxconnectioncount="1000"
 {{- else if eq .Values.solace.size "medium" }}
