Initial commit of HA work (#7)
* Start working toward HA cluster

* Re-jig templates for redundancy config-map

* update from working solution

* Change password config to configMap

* Add loadbalancer interactions.

* Managed ports change

* Start working toward HA cluster

* Re-jig templates for redundancy config-map

* update from working solution

* Change password config to configMap

* Add loadbalancer interactions.

* Managed ports change

* Trying to merge cleanup

* Testing relative links

* test relative links

* Edit start script to pick values file to work from

* Modified README to handle HA cluster

* Add debug logging to Docker facilites

* Add debug logs exported to kubectrl

* Merge artifact

--- a/solace/Chart.yaml
+++ b/solace/Chart.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: Deploy Solace VMR Singleton or HA Cluster onto a Kubernetes Cluster
 name: solace
 version: 0.1.0
 icon: https://dev.solace.com/wp-content/uploads/2016/10/solace-logo-white.png
 maintainers:
   - name: kenbarr
     email: ken.barr@solace.com
+home: http://dev.solace.com
 sources:
-   - http://dev.solace.com
+   - https://github.com/SolaceProducts/solace-kubernetes-quickstart
 keywords:
 - solace
 - vmr
