--- a/solace/values-examples/small-direct-noha.yaml
+++ b/solace/values-examples/small-direct-noha.yaml
@@ -1,6 +1,5 @@
-# Default storage, exemplifies simplicity, will create a /mnt/stateful_partition dir on host 
+# Default storage, exemplifies simplisity, will create a /mnt/stateful_partition dir on host 
 #  and use this for Solace message spool 
-configurationFiles: false
 solace:
   redundancy: false
   size: small
