--- a/solace/values-examples/small-persist-noha-provisionPvc.yaml
+++ b/solace/values-examples/small-persist-noha-provisionPvc.yaml
@@ -1,5 +1,4 @@
-# Need to first provision a directory /mnt/disks/vmr on host node
-#  use this for Solace message spool.  Used to test various fs and mount options
+# Create a PV of specified size and type, bind PVC to PV 
 solace:
   redundancy: false
   size: small
@@ -42,5 +41,6 @@ service:
     - port: 5405
       protocol: UDP
 storage:
-  persistent: false
-  hostPath: /mnt/disks/vmr
+  type: fast
+  persistent: true
+  size: 500Gi
