Expose ability to set File system type

--- a/solace/templates/storageClass.yaml
+++ b/solace/templates/storageClass.yaml
@@ -11,4 +11,6 @@ parameters:
   zone: {{ .Values.storage.zone }}
 {{- end }}
   type: {{- if eq .Values.storage.type "fast" }} pd-ssd {{ else }} pd-standard {{ end -}}
+{{- if .Values.storage.fsType }}
+  fsType: {{ .Values.storage.fsType }}
 {{ end  }}{{end}}
