Fix bracketing on fsType parameter

--- a/solace/templates/storageClass.yaml
+++ b/solace/templates/storageClass.yaml
@@ -13,4 +13,5 @@ parameters:
   type: {{- if eq .Values.storage.type "fast" }} pd-ssd {{ else }} pd-standard {{ end -}}
 {{- if .Values.storage.fsType }}
   fsType: {{ .Values.storage.fsType }}
+{{- end }}
 {{ end  }}{{end}}
