--- a/solace/values-examples/small-persist-noha-provisionPvc.yaml
+++ b/solace/values-examples/small-persist-noha-provisionPvc.yaml
@@ -41,7 +41,12 @@ service:
     - port: 5405
       protocol: UDP
 storage:
-  type: fast
+storage:
   persistent: true
-  size: 500Gi
-  fsType: xfs
+# For best performance set type:fast size:500Gi and fsType:xfs
+#  type: fast
+#  size: 500Gi
+#  fsType: xfs
+# For best compatability set type:standard size:30Gi and leave fsType default ext4
+  type: standard
+  size: 30Gi
