--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -62,3 +62,147 @@ data:
        ;;
       esac
 {{- end }}
+
+  config-sync-check.sh: |-
+      #!/bin/bash
+  {{- if .Values.solace.redundancy }}
+      yum install -y jq
+      # [TODO] KBARR not using correct method of finding ordinal until we bump min Kubernetes release above 1.8.1
+      # https://github.com/kubernetes/kubernetes/issues/40651
+      # node_ordinal=$(STATEFULSET_ORDINAL)
+      IFS='-' read -ra host_array <<< $(hostname)
+      node_ordinal=${host_array[-1]}
+      password=SOLOS_ADMIN_PASSWORD
+      loop_guard=30
+      pause=10
+      count=0
+      mate_active_check=""
+      if [ "${node_ordinal}" = "0" ]; then
+        echo "`date` INFO: Wait for Primary to be 'Local Active' or 'Mate Active'"
+        while [ ${count} -lt ${loop_guard} ]; do 
+          online_results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
+              -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
+              -v "/rpc-reply/rpc/show/redundancy/virtual-routers/primary/status/activity[text()]"`
+          local_activity=`echo ${online_results} | jq '.valueSearchResult' -`
+          echo "`date` INFO: Local activity state is: ${local_activity}"
+          run_time=$((${count} * ${pause}))
+          case "${local_activity}" in
+            "\"Local Active\"")
+              echo "`date` INFO: Redundancy is up locally, Primary Active, after ${run_time} seconds"
+              mate_active_check="Standby"
+              break
+              ;;
+            "\"Mate Active\"")
+              echo "`date` INFO: Redundancy is up locally, Backup Active, after ${run_time} seconds"
+              mate_active_check="Active"
+              break
+              ;;
+          esac
+          ((count++))
+          echo "`date` INFO: Waited ${run_time} seconds, Redundancy not yet up"
+          sleep ${pause}
+        done
+        if [ ${count} -eq ${loop_guard} ]; then
+          echo "`date` ERROR: Solace redundancy group never came up" | tee /dev/stderr
+          exit 1 
+        fi
+        loop_guard=30
+        pause=10
+        count=0
+        echo "`date` INFO: Wait for Backup to be 'Active' or 'Standby'"
+        while [ ${count} -lt ${loop_guard} ]; do 
+          online_results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
+              -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
+              -v "/rpc-reply/rpc/show/redundancy/virtual-routers/primary/status/detail/priority-reported-by-mate/summary[text()]"`
+          mate_activity=`echo ${online_results} | jq '.valueSearchResult' -`
+          echo "`date` INFO: Mate activity state is: ${mate_activity}"
+          run_time=$((${count} * ${pause}))
+          case "${mate_activity}" in
+            "\"Active\"")
+              echo "`date` INFO: Redundancy is up end-to-end, Backup Active, after ${run_time} seconds"
+              mate_active_check="Standby"
+              break
+              ;;
+            "\"Standby\"")
+              echo "`date` INFO: Redundancy is up end-to-end, Primary Active, after ${run_time} seconds"
+              mate_active_check="Active"
+              break
+              ;;
+          esac
+          ((count++))
+          echo "`date` INFO: Waited ${run_time} seconds, Redundancy not yet up"
+          sleep ${pause}
+        done
+        if [ ${count} -eq ${loop_guard} ]; then
+          echo "`date` ERROR: Solace redundancy group never came up" | tee /dev/stderr
+          exit 1 
+        fi
+      /mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
+              -q "<rpc semp-version='soltr/8_5VMR'><admin><config-sync><assert-master><router/></assert-master></config-sync></admin></rpc>"
+      /mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
+              -q "<rpc semp-version='soltr/8_5VMR'><admin><config-sync><assert-master><vpn-name>default</vpn-name></assert-master></config-sync></admin></rpc>"
+      fi
+      echo "`date` INFO: Solace VMR bringup complete"
+{{- end }}
+
+  semp_query.sh: |-
+      #!/bin/bash
+      OPTIND=1         # Reset in case getopts has been used previously in the shell.
+      # Initialize our own variables:
+      count_search=""
+      name=""
+      password=""
+      query=""
+      url=""
+      value_search=""
+      script_name=$0
+      verbose=0
+      while getopts "c:n:p:q:u:v:" opt; do
+          case "$opt" in
+          c)  count_search=$OPTARG
+              ;;
+          n)  name=$OPTARG
+              ;;
+          p)  password=$OPTARG
+              ;;
+          q)  query=$OPTARG
+              ;;
+          u)  url=$OPTARG
+              ;;
+          v)  value_search=$OPTARG
+              ;;        
+          esac
+      done
+      shift $((OPTIND-1))
+      [ "$1" = "--" ] && shift
+      verbose=1
+      echo "`date` INFO:${script_name}: count_search=${count_search} ,name=${name} ,password=xxx query=${query} \
+                  ,url=${url} ,value_search=${value_search} ,Leftovers: $@" >&2
+      if [[ ${url} = "" || ${name} = "" || ${password} = "" || ${query} = "" ]]; then
+          echo "`date` ERROR:${script_name}: url, name, password and query are madatory fields" >&2
+          echo  '{"errorInfo":"missing parameter"}'
+          exit 1
+        fi
+      query_response=`curl -u ${name}:${password} ${url} -d "${query}"`
+      query_response_code=`echo $query_response | xmllint -xpath 'string(/rpc-reply/execute-result/@code)' -`
+
+      if [[ -z ${query_response_code} && ${query_response_code} != "ok" ]]; then
+          echo "`date` ERROR:${script_name}: Query failed -${query_response}-" >&2
+          echo  "{\"errorInfo\":\"query failed -${query_response_code}-\"}"
+          exit 1
+      fi
+      echo "`date` INFO:${script_name}: Query passed ${query_response_code}" >&2
+      if [[ ! -z $value_search ]]; then
+          value_result=`echo $query_response | xmllint -xpath "string($value_search)" -`
+          echo "`date` INFO:${script_name}: Value search $value_search returned ${value_result}" >&2
+          echo  "{\"errorInfo\":\"\",\"valueSearchResult\":\"${value_result}\"}"
+          exit 0
+      fi
+      if [[ ! -z $count_search ]]; then
+          count_line=`echo $query_response | xmllint -xpath "$count_search" -`
+          count_string=`echo $count_search | cut -d '"' -f 2`
+          count_result=`echo ${count_line} | tr "><" "\n" | grep -c ${count_string}`
+          echo -e "`date` INFO:${script_name}: \n\t count search: $count_search \n\t count_line: ${count_line} \n\t count_string: ${count_string} \n\t count_result: ${count_result}" >&2
+          echo  "{\"errorInfo\":\"\",\"countSearchResult\":${count_result}}"
+          exit 0
+      fi
