--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -66,6 +66,7 @@ data:
   config-sync-check.sh: |-
       #!/bin/bash
   {{- if .Values.solace.redundancy }}
+      APP=`basename "$0"`
       yum install -y jq
       # [TODO] KBARR not using correct method of finding ordinal until we bump min Kubernetes release above 1.8.1
       # https://github.com/kubernetes/kubernetes/issues/40651
@@ -78,63 +79,63 @@ data:
       count=0
       mate_active_check=""
       if [ "${node_ordinal}" = "0" ]; then
-        echo "`date` INFO: Wait for Primary to be 'Local Active' or 'Mate Active'"
+        echo "`date` INFO: ${APP}-Wait for Primary to be 'Local Active' or 'Mate Active'"
         while [ ${count} -lt ${loop_guard} ]; do 
           online_results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
               -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
               -v "/rpc-reply/rpc/show/redundancy/virtual-routers/primary/status/activity[text()]"`
           local_activity=`echo ${online_results} | jq '.valueSearchResult' -`
-          echo "`date` INFO: Local activity state is: ${local_activity}"
+          echo "`date` INFO: ${APP}-Local activity state is: ${local_activity}"
           run_time=$((${count} * ${pause}))
           case "${local_activity}" in
             "\"Local Active\"")
-              echo "`date` INFO: Redundancy is up locally, Primary Active, after ${run_time} seconds"
+              echo "`date` INFO: ${APP}-Redundancy is up locally, Primary Active, after ${run_time} seconds"
               mate_active_check="Standby"
               break
               ;;
             "\"Mate Active\"")
-              echo "`date` INFO: Redundancy is up locally, Backup Active, after ${run_time} seconds"
+              echo "`date` INFO: ${APP}-Redundancy is up locally, Backup Active, after ${run_time} seconds"
               mate_active_check="Active"
               break
               ;;
           esac
           ((count++))
-          echo "`date` INFO: Waited ${run_time} seconds, Redundancy not yet up"
+          echo "`date` INFO: ${APP}-Waited ${run_time} seconds, Redundancy not yet up"
           sleep ${pause}
         done
         if [ ${count} -eq ${loop_guard} ]; then
-          echo "`date` ERROR: Solace redundancy group never came up" | tee /dev/stderr
+          echo "`date` ERROR: ${APP}-Solace redundancy group never came up" | tee /dev/stderr
           exit 1 
         fi
         loop_guard=30
         pause=10
         count=0
-        echo "`date` INFO: Wait for Backup to be 'Active' or 'Standby'"
+        echo "`date` INFO: ${APP}-Wait for Backup to be 'Active' or 'Standby'"
         while [ ${count} -lt ${loop_guard} ]; do 
           online_results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
               -q "<rpc semp-version='soltr/8_5VMR'><show><redundancy><detail/></redundancy></show></rpc>" \
               -v "/rpc-reply/rpc/show/redundancy/virtual-routers/primary/status/detail/priority-reported-by-mate/summary[text()]"`
           mate_activity=`echo ${online_results} | jq '.valueSearchResult' -`
-          echo "`date` INFO: Mate activity state is: ${mate_activity}"
+          echo "`date` INFO: ${APP}-Mate activity state is: ${mate_activity}"
           run_time=$((${count} * ${pause}))
           case "${mate_activity}" in
             "\"Active\"")
-              echo "`date` INFO: Redundancy is up end-to-end, Backup Active, after ${run_time} seconds"
+              echo "`date` INFO: ${APP}-Redundancy is up end-to-end, Backup Active, after ${run_time} seconds"
               mate_active_check="Standby"
               break
               ;;
             "\"Standby\"")
-              echo "`date` INFO: Redundancy is up end-to-end, Primary Active, after ${run_time} seconds"
+              echo "`date` INFO: ${APP}-Redundancy is up end-to-end, Primary Active, after ${run_time} seconds"
               mate_active_check="Active"
               break
               ;;
           esac
           ((count++))
-          echo "`date` INFO: Waited ${run_time} seconds, Redundancy not yet up"
+          echo "`date` INFO: ${APP}-Waited ${run_time} seconds, Redundancy not yet up"
           sleep ${pause}
         done
         if [ ${count} -eq ${loop_guard} ]; then
-          echo "`date` ERROR: Solace redundancy group never came up" | tee /dev/stderr
+          echo "`date` ERROR: ${APP}-Solace redundancy group never came up" | tee /dev/stderr
           exit 1 
         fi
       /mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
@@ -142,11 +143,37 @@ data:
       /mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
               -q "<rpc semp-version='soltr/8_5VMR'><admin><config-sync><assert-master><vpn-name>default</vpn-name></assert-master></config-sync></admin></rpc>"
       fi
-      echo "`date` INFO: Solace VMR bringup complete"
+      echo "`date` INFO: ${APP}-Solace VMR bringup complete"
 {{- end }}
+
+  readiness_check.sh: |-
+      #!/bin/bash
+      APP=`basename "$0"`
+      IFS='-' read -ra host_array <<< $(hostname)
+      node_ordinal=${host_array[-1]}
+      password=SOLOS_ADMIN_PASSWORD
+      return_code=0
+      echo "`date` INFO: ${APP}-Getting POD name"
+      echo "`date` INFO: ${APP}-Performing readiness check"
+      echo "`date` INFO: ${APP}-Deturmining redundancy role"
+      echo "`date` INFO: ${APP}-Redundancy role is ${local_role}"
+      echo "`date` INFO: ${APP}-Redundancy state based on role should be ${role_state}"
+      echo "`date` INFO: ${APP}-Deturmining redundancy state"
+      echo "`date` INFO: ${APP}-Redundancy state is ${local_state}" 
+      if [ ${role_state} -eq ${local_state} ]; then
+        if [ ${local_state} -eq "local_active" ]; then
+          echo "`date` INFO: ${APP}-Setting redundancy_active label" 
+        fi
+        echo "`date` INFO: ${APP}-Setting return code READY for ${pod_name}"
+      else
+        echo "`date` WARN: ${APP}-Setting return code NOT_READY for ${pod_name}"
+      fi
+      return ${return_code}
+
 
   semp_query.sh: |-
       #!/bin/bash
+      APP=`basename "$0"`
       OPTIND=1         # Reset in case getopts has been used previously in the shell.
       # Initialize our own variables:
       count_search=""
@@ -176,10 +203,10 @@ data:
       shift $((OPTIND-1))
       [ "$1" = "--" ] && shift
       verbose=1
-      echo "`date` INFO:${script_name}: count_search=${count_search} ,name=${name} ,password=xxx query=${query} \
+      echo "`date` INFO: ${APP}-${script_name}: count_search=${count_search} ,name=${name} ,password=xxx query=${query} \
                   ,url=${url} ,value_search=${value_search} ,Leftovers: $@" >&2
       if [[ ${url} = "" || ${name} = "" || ${password} = "" || ${query} = "" ]]; then
-          echo "`date` ERROR:${script_name}: url, name, password and query are madatory fields" >&2
+          echo "`date` ERROR: ${APP}-${script_name}: url, name, password and query are madatory fields" >&2
           echo  '{"errorInfo":"missing parameter"}'
           exit 1
         fi
@@ -187,14 +214,14 @@ data:
       query_response_code=`echo $query_response | xmllint -xpath 'string(/rpc-reply/execute-result/@code)' -`
 
       if [[ -z ${query_response_code} && ${query_response_code} != "ok" ]]; then
-          echo "`date` ERROR:${script_name}: Query failed -${query_response}-" >&2
+          echo "`date` ERROR: ${APP}-${script_name}: Query failed -${query_response}-" >&2
           echo  "{\"errorInfo\":\"query failed -${query_response_code}-\"}"
           exit 1
       fi
-      echo "`date` INFO:${script_name}: Query passed ${query_response_code}" >&2
+      echo "`date` INFO: ${APP}-${script_name}: Query passed ${query_response_code}" >&2
       if [[ ! -z $value_search ]]; then
           value_result=`echo $query_response | xmllint -xpath "string($value_search)" -`
-          echo "`date` INFO:${script_name}: Value search $value_search returned ${value_result}" >&2
+          echo "`date` INFO: ${APP}-${script_name}: Value search $value_search returned ${value_result}" >&2
           echo  "{\"errorInfo\":\"\",\"valueSearchResult\":\"${value_result}\"}"
           exit 0
       fi
@@ -202,7 +229,7 @@ data:
           count_line=`echo $query_response | xmllint -xpath "$count_search" -`
           count_string=`echo $count_search | cut -d '"' -f 2`
           count_result=`echo ${count_line} | tr "><" "\n" | grep -c ${count_string}`
-          echo -e "`date` INFO:${script_name}: \n\t count search: $count_search \n\t count_line: ${count_line} \n\t count_string: ${count_string} \n\t count_result: ${count_result}" >&2
+          echo -e "`date` INFO: ${APP}-${script_name}: \n\t count search: $count_search \n\t count_line: ${count_line} \n\t count_string: ${count_string} \n\t count_result: ${count_result}" >&2
           echo  "{\"errorInfo\":\"\",\"countSearchResult\":${count_result}}"
           exit 0
       fi
