--- a/solace/aws.yaml
+++ b/solace/aws.yaml
@@ -1,12 +1,13 @@
-# Create a PV of specified size and type, bind PVC to PV 
+# Default storage, exemplifies simplisity, will create a /mnt/stateful_partition dir on host 
+#  and use this for Solace message spool 
 solace:
   redundancy: true
   size: small
 # Current options are [gcp|aws]
-cloudProvider: SOLOS_CLOUD_PROVIDER
+cloudProvider: aws
 image:
-  repository: SOLOS_IMAGE_REPO
-  tag: SOLOS_IMAGE_TAG
+  repository: 669183491998.dkr.ecr.us-east-1.amazonaws.com/solos-vmr
+  tag: 8.7.0.1027-evaluation
   pullPolicy: IfNotPresent
 filepaths:
   configmap: "/mnt/disks/solace"
@@ -36,12 +37,9 @@ service:
     - port: 55555
       protocol: TCP
     - port: 22
+      protocol: TCP
 storage:
   persistent: true
-# For best performance set type:fast size:500Gi and fsType:xfs
-#  type: fast
-#  size: 500Gi
-#  fsType: xfs
-# For best compatability set type:standard size:30Gi and leave fsType default ext4
   type: standard
   size: 30Gi
+
