--- a/solace/values-examples/small-direct-noha-existingVolume.yaml
+++ b/solace/values-examples/small-direct-noha-existingVolume.yaml
@@ -4,6 +4,8 @@ configurationFiles: false
 solace:
   redundancy: false
   size: small
+# Current options are [gcp|aws]
+cloudProvider: SOLOS_CLOUD_PROVIDER
 image:
   repository: SOLOS_IMAGE_REPO
   tag: SOLOS_IMAGE_TAG
